--- a/examples/advanced/advanced.html
+++ b/examples/advanced/advanced.html
@@ -9,7 +9,8 @@
   <script type="importmap">
     {
       "imports": {
-        "ol/": "https://cdn.jsdelivr.net/npm/ol@8.0.0/"
+        "ol/": "https://cdn.jsdelivr.net/npm/ol@8.0.0/",
+        "openlayers-prefetching": "https://unpkg.com/openlayers-prefetching/dist/PrefetchManager.esm.js"
       }
     }
   </script>
