--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </p>
 
   <div class="examples">
-        <div class="example-card">
+    <div class="example-card">
       <h2>Advanced Example</h2>
       <p>
         Understand how the prefetching system works under the hood with a more complex example. This demo includes:
@@ -86,19 +86,15 @@
         <li>Timeseries imagery from Microsoft Planetary Computer</li>
         <li>Customizable priorities</li>
       </ul>
-      <a href="advanced/advanced.html">View Advanced Example</a>
+      <a href="examples/advanced/advanced.html">View Advanced Example</a>
     </div>
     <div class="example-card">
       <h2>Basic Example</h2>
       <p>
         A simple demonstration showing how the prefetch manager is used in simple projects.
-        Check the Advanced example for now
-      <ul>
-      </ul>
-  <a href="basic/basic.html">TODO</a>
+      </p>
+      <a href="examples/basic/basic.html">View Basic Example</a>
     </div>
-
-
   </div>
 </body>
 </html>
